--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
   "name": "celestialcompass",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A highly extensible IME for Celeste and Everest",
-  "main": "build/core/boot.js",
-  "scripts": {
-    "tsw": "tsc -w"
-  },
   "author": "SkLz",
   "license": "MIT",
-  "dependencies": {
-    "electron": "^11.2.3",
+  "main": "out/core/boot.js",
+  "type": "module",
+  "scripts": {
+    "tsw": "tsc -w",
+    "tsxw": "tsc tsconfig-web.json -w"
+  },
+  "devDependencies": {
     "typescript": "^4.0.3",
+    "@types/jquery": "^3.5.3",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "electron": "^11.2.3"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "sass": "^1.27.0",
     "ws": "^7.4.3"
   }
 }
