--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
   "name": "celestialcompass",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A highly extensible IME for Celeste and Everest",
   "author": "SkLz",
   "license": "MIT",
   "main": "out/core/boot.js",
-  "type": "module",
   "scripts": {
     "tsw": "tsc -w",
-    "tsxw": "tsc tsconfig-web.json -w"
+    "tsxw": "tsc -p tsconfig-web.json -w",
+    "run": "npx electron build/core/boot.js"
   },
   "devDependencies": {
-    "typescript": "^4.0.3",
     "@types/jquery": "^3.5.3",
+    "@types/materialize-css": "^1.0.8",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "electron": "^11.2.3"
+    "electron": "^11.2.3",
+    "grunt": "^1.3.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-ts": "^6.0.0-beta.22",
+    "grunt-webpack": "^4.0.2",
+    "sass-loader": "^11.0.1",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.0.3"
   },
   "dependencies": {
+    "golden-layout": "^2.0.2",
+    "grunt-contrib-htmlmin": "^3.1.0",
+    "grunt-contrib-sass": "^2.0.0",
     "jquery": "^3.5.1",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.14.0",
