--- a/tsconfig-web.json
+++ b/tsconfig-web.json
@@ -3,24 +3,24 @@
     "enable": false
   },
   "include": [
-    "src/**/*.tsx"
-  ],
-  "exclude": [
-    "./lib/**/*",
-    "./node_modules"
+    "./src/**/*.tsx"
   ],
   "compilerOptions": {
     "target": "es2015",
-    "module": "es2015",
-    "jsx": "react",
-    "allowJs": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
-    "outDir": "./out",
+    "jsx": "react",
+    "outDir": "./build",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+
+    "lib": [
+      "ES5", "ES6", "DOM"
+    ]
   }
 }
