--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "tsw": "tsc -w",
     "tsxw": "tsc -p tsconfig-web.json -w",
-    "run": "npx electron build/core/boot.js"
+    "run": "npx electron build/core/boot.js",
+    "files": "npx grunt"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.3",
@@ -22,7 +23,6 @@
     "grunt-ts": "^6.0.0-beta.22",
     "grunt-webpack": "^4.0.2",
     "sass-loader": "^11.0.1",
-    "ts-loader": "^8.0.17",
     "typescript": "^4.0.3"
   },
   "dependencies": {
@@ -34,6 +34,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "sass": "^1.27.0",
+    "semver": "^7.3.4",
     "ws": "^7.4.3"
   }
 }
