--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "./src/**/*.tsx"
   ],
   "compilerOptions": {
-    "target": "es2015",
+    "target": "ES2020",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
@@ -22,7 +22,7 @@
     "forceConsistentCasingInFileNames": true,
 
     "lib": [
-      "ES5", "ES6"
+      "ES5", "ES2015", "ES2016", "ES2017", "ES2018", "ES2019", "ES2020"
     ]
   }
 }
