--- a/tsconfig-main.json
+++ b/tsconfig-main.json
@@ -3,13 +3,15 @@
       "enable": false
     },
     "include": [
+      "./src/node_modules/**/*.ts"
+    ],
+    "exclude": [
       "./src/node_modules/**/*.tsx"
     ],
     "compilerOptions": {
       "target": "ES2020",
       "module": "commonjs",
       "moduleResolution": "node",
-      "jsx": "react",
 
       "sourceMap": true,
       "declaration": true,
@@ -24,7 +26,7 @@
       "forceConsistentCasingInFileNames": true,
   
       "lib": [
-        "ES5", "ES2015", "ES2016", "ES2017", "ES2018", "ES2019", "ES2020", "DOM"
+        "ES5", "ES2015", "ES2016", "ES2017", "ES2018", "ES2019", "ES2020"
       ]
     }
   }
